# transfer-learning

./: .gitignore  DL_HW3.ipynb  README.md  download_data.sh  draw_arch.py  pyproject.toml  run_one.py
configs/: best_multiseed.json  ctop_sweep.json  ptoc_sweep.json  ssl_ptoc.json
slurm/: grayscale.sh  ssl_ptoc.sh  sweep_ctop.sh  sweep_multiseed.sh  sweep_ptoc.sh
src/: dann.py  data.py  mcd.py  models.py  shot.py  ssl.py  training.py
